file(GLOB VuoCoreTypeHeaders RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
list(FILTER VuoCoreTypeHeaders EXCLUDE REGEX "^(VuoMathExpression|VuoShader(Shaders|Uniforms)|coreTypes|type)\.h$")

VuoCompileTypes(
	VuoAnchor.c
	VuoAudioSamples.c
	VuoBlendMode.c
	VuoBoolean.c
	VuoColor.c
	VuoCoordinateUnit.c
	VuoCubemap.c
	VuoCursor.c
	VuoCurve.c
	VuoCurveEasing.c
	VuoDictionary_VuoText_VuoReal.cc
	VuoDictionary_VuoText_VuoText.cc
	VuoDiode.c
	VuoFont.c
	VuoHorizontalAlignment.c
	VuoImage.c
	VuoImageColorDepth.c
	VuoImageWrapMode.c
	VuoInteger.c
	VuoIntegerRange.c
	VuoInteraction.c
	VuoInteractionType.c
	VuoListPosition.c
	VuoLoopType.c
#	VuoMathExpression.c
	VuoMathExpressionList.c
	VuoMesh.c
	VuoModifierKey.c
	VuoOrientation.c
	VuoPoint2d.c
	VuoPoint3d.c
	VuoPoint4d.c
	VuoRange.c
	VuoReal.c
	VuoRectangle.c
	VuoRenderedLayers.c
	VuoSceneObject.cc
	VuoScreen.c
	VuoShader.cc
	VuoSortOrder.c
	VuoText.c
	VuoTextCase.c
	VuoTextComparison.c
	VuoTextSort.c
	VuoTransform.c
	VuoTransform2d.c
	VuoTree.cc
	VuoUrl.c
	VuoUuid.c
	VuoVerticalAlignment.c
	VuoWave.c
	VuoWindowDescription.c
	VuoWindowProperty.c
	VuoWindowReference.m
	VuoWrapMode.c
)
target_sources(vuo.core.types PRIVATE
	VuoAnchor.h
	VuoAudioSamples.h
	VuoBlendMode.h
	VuoBoolean.h
	VuoColor.h
	VuoCoordinateUnit.h
	VuoCubemap.h
	VuoCursor.h
	VuoCurve.h
	VuoCurveEasing.h
	VuoDictionary_VuoText_VuoReal.h
	VuoDictionary_VuoText_VuoText.h
	VuoDiode.h
	VuoFont.h
	VuoHorizontalAlignment.h
	VuoImage.h
	VuoImageColorDepth.h
	VuoImageWrapMode.h
	VuoInteger.h
	VuoIntegerRange.h
	VuoInteraction.h
	VuoInteractionType.h
	VuoListPosition.h
	VuoLoopType.h
	VuoMathExpression.h
	VuoMathExpressionList.h
	VuoMesh.h
	VuoModifierKey.h
	VuoOrientation.h
	VuoPoint2d.h
	VuoPoint3d.h
	VuoPoint4d.h
	VuoRange.h
	VuoReal.h
	VuoRectangle.h
	VuoRenderedLayers.h
	VuoSceneObject.h
	VuoScreen.h
	VuoShader.h
	VuoShaderShaders.h
	VuoShaderUniforms.h
	VuoSortOrder.h
	VuoText.h
	VuoTextCase.h
	VuoTextComparison.h
	VuoTextSort.h
	VuoTransform.h
	VuoTransform2d.h
	VuoTree.h
	VuoUrl.h
	VuoUuid.h
	VuoVerticalAlignment.h
	VuoWave.h
	VuoWindowDescription.h
	VuoWindowProperty.h
	VuoWindowReference.h
	VuoWrapMode.h
	type.h
)
target_include_directories(vuo.core.types
	PRIVATE
	../node/vuo.data
	../node/vuo.image
	../node/vuo.time
	../node/vuo.ui
)
target_link_libraries(vuo.core.types
	PUBLIC
	"-framework AppKit"
	"-framework OpenGL"
	"-framework IOSurface"
	CONAN_PKG::jsonc
	CONAN_PKG::libxml2
	CONAN_PKG::muparser
	${PROJECT_BINARY_DIR}/library/VuoImageRenderer.o
	${PROJECT_BINARY_DIR}/library/VuoMathExpressionParser.o
	${PROJECT_BINARY_DIR}/library/VuoMeshUtility.o
	${PROJECT_BINARY_DIR}/library/VuoUrlParser.o
	${PROJECT_BINARY_DIR}/library/csgjs.o
	vuo.noise.libraries
	vuo.time.types
)

add_subdirectory(inputEditor)
add_subdirectory(list)
