file(GLOB VuoCoreTypeHeaders RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
list(FILTER VuoCoreTypeHeaders EXCLUDE REGEX "^(VuoMathExpression|VuoShader(Shaders|Uniforms)|coreTypes|type)\.h$")

VuoCompileTypes(
	VuoAnchor.c
	VuoAudioSamples.c
	VuoBlendMode.c
	VuoBoolean.c
	VuoColor.c
	VuoCoordinateUnit.c
	VuoCubemap.c
	VuoCursor.c
	VuoCurve.c
	VuoCurveEasing.c
	VuoDictionary_VuoText_VuoReal.cc
	VuoDictionary_VuoText_VuoText.cc
	VuoDiode.c
	VuoFont.c
	VuoHorizontalAlignment.c
	VuoImage.c
	VuoImageColorDepth.c
	VuoImageWrapMode.c
	VuoInteger.c
	VuoIntegerRange.c
	VuoInteraction.c
	VuoInteractionType.c
	VuoListPosition.c
	VuoLoopType.c
#	VuoMathExpression.c
	VuoMathExpressionList.c
	VuoMesh.c
	VuoModifierKey.c
	VuoOrientation.c
	VuoPoint2d.c
	VuoPoint3d.c
	VuoPoint4d.c
	VuoRange.c
	VuoReal.c
	VuoRectangle.c
	VuoRenderedLayers.c
	VuoSceneObject.cc
	VuoScreen.c
	VuoShader.cc
	VuoSortOrder.c
	VuoText.c
	VuoTextCase.c
	VuoTextComparison.c
	VuoTextSort.c
	VuoTransform.c
	VuoTransform2d.c
	VuoTree.cc
	VuoUrl.c
	VuoUuid.c
	VuoVerticalAlignment.c
	VuoWave.c
	VuoWindowDescription.c
	VuoWindowProperty.c
	VuoWindowReference.m
	VuoWrapMode.c
	compound/VuoList.cc
)
target_sources(vuo.core.types PRIVATE
	VuoAnchor.h
	VuoAudioSamples.h
	VuoBlendMode.h
	VuoBoolean.h
	VuoColor.h
	VuoCoordinateUnit.h
	VuoCubemap.h
	VuoCursor.h
	VuoCurve.h
	VuoCurveEasing.h
	VuoDictionary_VuoText_VuoReal.h
	VuoDictionary_VuoText_VuoText.h
	VuoDiode.h
	VuoFont.h
	VuoHorizontalAlignment.h
	VuoImage.h
	VuoImageColorDepth.h
	VuoImageWrapMode.h
	VuoInteger.h
	VuoIntegerRange.h
	VuoInteraction.h
	VuoInteractionType.h
	VuoListPosition.h
	VuoLoopType.h
	VuoMathExpression.h
	VuoMathExpressionList.h
	VuoMesh.h
	VuoModifierKey.h
	VuoOrientation.h
	VuoPoint2d.h
	VuoPoint3d.h
	VuoPoint4d.h
	VuoRange.h
	VuoReal.h
	VuoRectangle.h
	VuoRenderedLayers.h
	VuoSceneObject.h
	VuoScreen.h
	VuoShader.h
	VuoShaderShaders.h
	VuoShaderUniforms.h
	VuoSortOrder.h
	VuoText.h
	VuoTextCase.h
	VuoTextComparison.h
	VuoTextSort.h
	VuoTransform.h
	VuoTransform2d.h
	VuoTree.h
	VuoUrl.h
	VuoUuid.h
	VuoVerticalAlignment.h
	VuoWave.h
	VuoWindowDescription.h
	VuoWindowProperty.h
	VuoWindowReference.h
	VuoWrapMode.h
	type.h
	compound/VuoList.h
)
target_include_directories(vuo.core.types
	PRIVATE
	${PROJECT_SOURCE_DIR}/node/vuo.data
	${PROJECT_SOURCE_DIR}/node/vuo.image
	${PROJECT_SOURCE_DIR}/node/vuo.time
	${PROJECT_SOURCE_DIR}/node/vuo.ui
	${PROJECT_SOURCE_DIR}/library  # for csgjs.cc
)
target_link_libraries(vuo.core.types
	PUBLIC
	"-framework AppKit"
	"-framework OpenGL"
	"-framework IOSurface"
	CONAN_PKG::jsonc
	CONAN_PKG::libxml2
	CONAN_PKG::muparser
	${PROJECT_BINARY_DIR}/library/VuoImageRenderer.o
	${PROJECT_BINARY_DIR}/library/VuoMathExpressionParser.o
	${PROJECT_BINARY_DIR}/library/VuoMeshUtility.o
	${PROJECT_BINARY_DIR}/library/VuoUrlParser.o
	${PROJECT_BINARY_DIR}/library/csgjs.o
	vuo.noise.libraries
	vuo.time.types
	vuo.time.types.compound
)

VuoCompileCompoundTypes(
	# List types needed by targets compiled with Clang rather than the Vuo compiler
	VuoList_VuoAnchor.cc
	VuoList_VuoBoolean.cc
	VuoList_VuoColor.cc
	VuoList_VuoHorizontalAlignment.cc
	VuoList_VuoImage.cc
	VuoList_VuoImageColorDepth.cc
	VuoList_VuoImageWrapMode.cc
	VuoList_VuoInteger.cc
	VuoList_VuoPoint2d.cc
	VuoList_VuoPoint3d.cc
	VuoList_VuoPoint4d.cc
	VuoList_VuoScreen.cc
	VuoList_VuoReal.cc
	VuoList_VuoText.cc
	VuoList_VuoTextCase.cc
	VuoList_VuoVerticalAlignment.cc

	# Additional list types referenced by *_allowedValues() or other functions in vuo.core.types
	VuoList_VuoBlendMode.cc
	VuoList_VuoCoordinateUnit.cc
	VuoList_VuoCursor.cc
	VuoList_VuoCurve.cc
	VuoList_VuoCurveEasing.cc
	VuoList_VuoDiode.cc
	VuoList_VuoInteraction.cc
	VuoList_VuoInteractionType.cc
	VuoList_VuoListPosition.cc
	VuoList_VuoLoopType.cc
	VuoList_VuoModifierKey.cc
	VuoList_VuoOrientation.cc
	VuoList_VuoSceneObject.cc
	VuoList_VuoSortOrder.cc
	VuoList_VuoTextSort.cc
	VuoList_VuoTree.cc
	VuoList_VuoWave.cc
	VuoList_VuoWindowProperty.cc
	VuoList_VuoWrapMode.cc

	# Additional list types referenced by types, node classes, or libraries
	VuoList_VuoAudioSamples.cc
	VuoList_VuoTransform.cc
	VuoList_VuoTransform2d.cc
	VuoList_VuoUrl.cc
)

add_subdirectory(inputEditor)
