add_executable(vuo-compile
	vuo-compile.cc
)
set_target_properties(vuo-compile PROPERTIES
	BUILD_RPATH ${CONAN_LIB_DIRS_LLVM}
)
target_include_directories(vuo-compile
	PRIVATE
		${PROJECT_BINARY_DIR}/compiler
)
target_link_libraries(vuo-compile
	"-framework AppKit"
	VuoCompiler
)
target_link_options(vuo-compile
	PRIVATE
		# Ensure these symbols from libVuoCompiler.a are included, so that VuoModuleCompiler dylibs can use them.
		LINKER:-exported_symbol,__ZN7VuoType18listTypeNamePrefixE
		LINKER:-exported_symbol,__ZN7VuoType20isDictionaryTypeNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN7VuoType24extractInnermostTypeNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN9VuoModule10getNodeSetEv
		LINKER:-exported_symbol,__ZN9VuoModule12getModuleKeyEv
		LINKER:-exported_symbol,__ZN10VuoNodeSet14getHeaderPathsEv
		LINKER:-exported_symbol,__ZN10VuoNodeSet15getFileContentsERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN11VuoCompiler13getTargetArchENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN11VuoCompiler17globalLLVMContextE
		LINKER:-exported_symbol,__ZN12VuoNodeClass15isNodeClassNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN14VuoClangIssues7isEmptyEv
		LINKER:-exported_symbol,__ZN14VuoClangIssues9hasErrorsEv
		LINKER:-exported_symbol,__ZN14VuoGenericType20findGenericTypeNamesERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN14VuoGenericType31replaceGenericTypeNamesInStringERNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEERKNS0_3mapIS6_S6_NS0_4lessIS6_EENS4_INS0_4pairIKS6_S6_EEEEEERNS0_6vectorIS6_NS4_IS6_EEEE
		LINKER:-exported_symbol,__ZN15VuoCompilerType18supportsComparisonEv
		LINKER:-exported_symbol,__ZN15VuoCompilerType29hasInterprocessStringFunctionEv
		LINKER:-exported_symbol,__ZN16VuoCompilerIssue12setModuleKeyERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoCompilerIssue14setClangIssuesENSt3__110shared_ptrI14VuoClangIssuesEE
		LINKER:-exported_symbol,__ZN16VuoCompilerIssueC1ENS_9IssueTypeERKNSt3__112basic_stringIcNS1_11char_traitsIcEENS1_9allocatorIcEEEES9_S9_S9_
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4File4pathEv
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4File6existsEv
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4File9extensionEv
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4File19getContentsAsStringEv
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4File26fileWithDifferentExtensionENSt3__112basic_stringIcNS1_11char_traitsIcEENS1_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4FileC1ENSt3__112basic_stringIcNS1_11char_traitsIcEENS1_9allocatorIcEEEES7_
		LINKER:-exported_symbol,__ZN16VuoFileUtilities4FileD1Ev
		LINKER:-exported_symbol,__ZN16VuoFileUtilities9splitPathENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEERS6_S7_S7_
		LINKER:-exported_symbol,__ZN16VuoFileUtilities10deleteFileENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities10fileExistsENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities11makeTmpFileENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES6_S6_
		LINKER:-exported_symbol,__ZN16VuoFileUtilities14isAbsolutePathERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities15getAbsolutePathERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities16canonicalizePathERNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities16readFileToStringENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities24isCFamilySourceExtensionENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities26isCPlusPlusSourceExtensionENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities27isObjectiveCSourceExtensionENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN16VuoFileUtilities35isObjectiveCPlusPlusSourceExtensionENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN17VuoCompilerIssues6appendEPS_
		LINKER:-exported_symbol,__ZN17VuoCompilerIssues6appendERK16VuoCompilerIssue
		LINKER:-exported_symbol,__ZN17VuoCompilerIssues7isEmptyEv
		LINKER:-exported_symbol,__ZN17VuoCompilerIssues9hasErrorsEv
		LINKER:-exported_symbol,__ZN17VuoCompilerIssuesC1Ev
		LINKER:-exported_symbol,__ZN17VuoCompilerModule17parseGenericTypesEP11json_objectRNSt3__16vectorINS2_12basic_stringIcNS2_11char_traitsIcEENS2_9allocatorIcEEEENS7_IS9_EEEERNS2_3mapIS9_S9_NS2_4lessIS9_EENS7_INS2_4pairIKS9_S9_EEEEEERNSD_IS9_SB_SF_NS7_INSG_ISH_SB_EEEEEE
		LINKER:-exported_symbol,__ZN17VuoModuleCompiler13lookUpVuoTypeERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN17VuoModuleCompiler22registerModuleCompilerENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEPFPS_RKS6_S9_RK25VuoModuleCompilerSettingsE
		LINKER:-exported_symbol,__ZN17VuoModuleCompilerC2ERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES8_RK25VuoModuleCompilerSettings
		LINKER:-exported_symbol,__ZN17VuoModuleCompilerD2Ev
		LINKER:-exported_symbol,__ZN18VuoStringUtilities4joinERKNSt3__16vectorINS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEENS5_IS7_EEEEc
		LINKER:-exported_symbol,__ZN18VuoStringUtilities4joinERKNSt3__16vectorINS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEENS5_IS7_EEEERKS7_
		LINKER:-exported_symbol,__ZN18VuoStringUtilities5splitERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEc
		LINKER:-exported_symbol,__ZN18VuoStringUtilities8endsWithERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES8_
		LINKER:-exported_symbol,__ZN18VuoStringUtilities10beginsWithERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES8_
		LINKER:-exported_symbol,__ZN18VuoStringUtilities10beginsWithEPKcS1_
		LINKER:-exported_symbol,__ZN18VuoStringUtilities11substrAfterERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES8_
		LINKER:-exported_symbol,__ZN18VuoStringUtilities13doForEachLineERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEENS0_8functionIFvPKcEEE
		LINKER:-exported_symbol,__ZN18VuoStringUtilities14makeRandomHashEi
		LINKER:-exported_symbol,__ZN18VuoStringUtilities20formUniqueIdentifierENSt3__18functionIFbRKNS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEEEES9_S9_
		LINKER:-exported_symbol,__ZN19VuoMakeDependencies14createFromFileERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEE
		LINKER:-exported_symbol,__ZN19VuoMakeDependencies18getDependencyPathsEv
		LINKER:-exported_symbol,__ZN19VuoMakeDependencies18setDependencyPathsERKNSt3__16vectorINS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEENS5_IS7_EEEE
		LINKER:-exported_symbol,__ZN19VuoMakeDependencies30getPlaceholderCompiledFilePathEv
		LINKER:-exported_symbol,__ZN20VuoCompilerExceptionC1ERK16VuoCompilerIssue
		LINKER:-exported_symbol,__ZN20VuoCompilerExceptionD1Ev
		LINKER:-exported_symbol,__ZN22VuoCompilerGenericType21chooseBackingTypeNameENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEENS0_6vectorIS6_NS4_IS6_EEEE
		LINKER:-exported_symbol,__ZN23VuoCompilerCompoundType21parseSpecializedTypesERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES8_
		LINKER:-exported_symbol,__ZN23VuoCompilerCompoundType28parseGenericCompoundTypeNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEm
		LINKER:-exported_symbol,__ZN23VuoCompilerCompoundType29buildSpecializedModuleDetailsEP15VuoCompilerTypeRKNSt3__13mapINS2_12basic_stringIcNS2_11char_traitsIcEENS2_9allocatorIcEEEES9_NS2_4lessIS9_EENS7_INS2_4pairIKS9_S9_EEEEEERKNS3_IS9_S1_SB_NS7_INSC_ISD_S1_EEEEEE
		LINKER:-exported_symbol,__ZN23VuoCompilerCompoundType32buildSpecializedCompoundTypeNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEERKNS0_6vectorIS6_NS4_IS6_EEEE
		LINKER:-exported_symbol,__ZN23VuoCompilerCompoundType34buildUnspecializedCompoundTypeNameERKNSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEm
		LINKER:-exported_symbol,__ZN24VuoModuleCompilerResultsC1Ev
		LINKER:-exported_symbol,__ZN29VuoCompilerDiagnosticConsumerC1ENSt3__110shared_ptrI14VuoClangIssuesEENS0_3mapINS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEESA_NS0_4lessISA_EENS8_INS0_4pairIKSA_SA_EEEEEE
		LINKER:-exported_symbol,__ZN31VuoCompilerSpecializedNodeClass25parseGenericNodeClassNameENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEm
		LINKER:-exported_symbol,__ZN31VuoCompilerSpecializedNodeClass29buildSpecializedModuleDetailsERKNSt3__13mapINS0_12basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEES7_NS0_4lessIS7_EENS5_INS0_4pairIKS7_S7_EEEEEERSB_
		LINKER:-exported_symbol,__ZNK13VuoBaseDetailI7VuoTypeE7getBaseEv
		LINKER:-exported_symbol,__ZNK20VuoCompilerException9getIssuesEv
		LINKER:-exported_symbol,__ZTI17VuoModuleCompiler
		LINKER:-exported_symbol,__ZTI20VuoCompilerException
)
add_dependencies(vuo-compile
	VuoCompilerHash
)
add_custom_command(TARGET vuo-compile POST_BUILD COMMAND ${codesignAdHoc} ${PROJECT_BINARY_DIR}/bin/vuo-compile)
VuoAddInfoPListSection(vuo-compile vuo-compile-Info.plist)
VuoPCH(vuo-compile LLVM)
